[package]
name = "unpatched-agent"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
once_cell = "1.18.0"
sysinfo = "0.29"
systemctl = "0.1.9"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = [ "v4", "fast-rng", "macro-diagnostics"]}

[[bin]]
name = "unpatched-agent"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
