[package]
name = "unpatched-agent"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = [ "v4", "fast-rng", "macro-diagnostics"] }
duration-str = "0.5"

[[bin]]
name = "unpatched-agent"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
