[package]
name = "unpatched-agent"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Alexander Kunde<alexander@apimeister.com>", "Jens Walter<jens@apimeister.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
rustls = { version = "0.21" , features = ["dangerous_configuration"] }

[[bin]]
name = "unpatched-agent"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
